# image

./: CMakeLists.txt  LICENSE
filter/: CMakeLists.txt  filter.h  gauss.c  median.c
fmt/: CMakeLists.txt  bitmap.c  bitmap.h  jpeg.c  jpeg.h  mcu.c  mcu.h
img/: CMakeLists.txt  image.c  image.h
include/: bitmap.h  bitstring.h  dct.h  filter.h  image.h  jpeg.h  mat.h  mcu.h
src/: CMakeLists.txt  bitmap.c  bitstring.c  dct.c  image.c  mcu.c
src/filter/: gauss.c  gaussion.c  median.c
src/fmt/: jpeg.c
tests/: CMakeLists.txt  test_bitstring.c  test_bmp.c  test_gauss.c  test_gaussian.c  test_jpeg.c  test_median.c
transform/: CMakeLists.txt  dct.h
util/: CMakeLists.txt  bitstring.c  bitstring.h  mat.c
